--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Hefei, Anhui, China"
-  employer         : "University of Science and Technology of China"
+  employer         : "Univ. of Sci & Tech of China"
   uri              : # URL
   email            : "orenwang@mail.ustc.edu.cn" 
 
