--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 locale                   : "en-US"
 title                    : "Wang Zhaochen"
 title_separator          : "-"
-name                     : &name "Wang Zhaochen"
+name                     : &name "Zhaochen Wang"
 description              : &description "personal description"
 url                      : https://antwerpblue.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -22,7 +22,7 @@ repository               : "antwerpblue/antwerpblue.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "My Name"
+  name             : "Zhaochen Wang"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Hefei, Anhui, China"
